# self-hosted

./: .gitignore  .pre-commit-config.yaml  Makefile  Makefile copy  package-lock.json  package.json  pyproject.toml
ansible/: .gitignore  Makefile  ansible.cfg  inventory.yml  requirements.yml
ansible/playbooks/: nodes.yml  upgrade.yml
ansible/roles/chezmoi/defaults/: main.yml
ansible/roles/chezmoi/tasks/: install.yml  main.yml  update.yml  upgrade.yml
ansible/roles/docker/: README.md
ansible/roles/docker/tasks/: main.yml  ubuntu.yml
ansible/roles/pyenv/: README.md
ansible/roles/pyenv/defaults/: main.yml
ansible/roles/pyenv/meta/: .galaxy_install_info  main.yml
ansible/roles/pyenv/tasks/: darwin.yml  debian.yml  install.yml  main.yml  redhat.yml
ansible/roles/ubuntu/: README.md
ansible/roles/ubuntu/defaults/: main.yml
ansible/roles/ubuntu/meta/: argument_specs.yml
ansible/roles/ubuntu/tasks/: install-packages.yml  main.yml
