[project]
authors = [
  {email = "kyle@finley.sh", name = "Kyle Finley"},
]
description = "Management of my self-hosted services."
maintainers = [
  {email = "kyle@finley.sh", name = "Kyle Finley"},
]
name = "self-hosted"
requires-python = ">=3.14,<=4.0"
version = "0.0.0"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ansible = "^13.7.0"
pre-commit = "^4.6.0"

[tool.tomlsort]
all = true
in_place = true
sort_first = ["project", "tool", "tool.poetry"]
spaces_before_inline_comment = 2
trailing_comma_inline_array = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
